# HumanFoot

./: .gitignore  2_Test01_Dynamic.bvh  2_Test01_Dynamic.trc  2_Test01_Dynamic_trc.trc  CMakeLists.txt  DartModelOnline.py  HumanFoot.pyproj  HumanFoot.sln  Makefile  P_3_test01_Dynamic.bvh  P_3_test01_dynamic.trc  README.md  gluTest.py  requirements.txt  reward_web_server.py
DartDeep/: dart_env.py  dart_env_v2.py  dart_env_v2_1.py  dart_env_v2_2.py  dart_env_v3.py  dart_env_v4.py  dart_multi_env.py  pd_controller.py  woody_walk_normal.bvh
DartDeepRNN/: 69_01_1.bvh  cmu_with_ground.xml  render_rnn.py  train_rnn.py
DartFootDeep/: pd_controller.py
DartFootProject/: bvh2dartSkel.py  dartSmallTest.py  main_dartSoftSimpleTest.py  main_dartSoftTest.py  (+6 more)
PyCommon/externalLibs/VirtualPhysics2010/Examples/dartModel/: CMakeLists.txt  cart_pole_blade.skel  main.cpp
PyCommon/externalLibs/VirtualPhysics2010/Examples/stacking/: CMakeLists.txt
PyCommon/externalLibs/VirtualPhysics2010/vpLib/: CMakeLists.txt  LieGroup.cpp  PrimColDet.cpp  vpBody.cpp  vpCollisionDetector.cpp  vpDynamics.cpp  vpGeom.cpp  vpLib.makefile  vpPrimitiveCollisionDetector.cpp  vpSystem.cpp  vpWorld.cpp
PyCommon/externalLibs/VirtualPhysics2010/vpLib/tmp/Win32/gccRelease/: LieGroup.d  PrimColDet.d  rmatrix3.d  vp1DOFJoint.d  vpBJoint.d  vpBody.d  vpCollisionDetector.d  vpCollisionGraphBuilder.d  vpCollisionResolver.d  vpContactResolver.d  vpDynamics.d  vpGeom.d  vpJoint.d  vpKinematics.d  vpMaterial.d  vpNDOFJoint.d  vpPJoint.d  vpPenetrationRelaxer.d  vpPrimitiveCollisionDetector.d  vpRJoint.d  vpSJoint.d  vpSingleSystem.d  vpSpring.d  vpSystem.d  vpUJoint.d  vpWJoint.d  vpWorld.d  vpWorld_IO.d  wpWorld_IO.d
PyCommon/externalLibs/VirtualPhysics2010/vpRenderer/: CMakeLists.txt  GLFramework.cpp  GLFramework.h  vpBasicRenderer.h  vpRenderer.cpp
PyCommon/modules/: CMakeLists.txt  Makefile  modules._zip  modules.sln  modules.vcproj  modules.vcxproj
PyCommon/modules/ArticulatedBody/: SimpleViewer.settings  hpBipedFeedback.py  hpFootIK.py  hpFootIK_v2.py  hpInvKine.py  hpInvKineDart.py  hpJacobian.py  pdcontroller.py  ysControl.py  ysJacobian.py  ysMomentum.py  ysReferencePoints.py
PyCommon/modules/Control/: Balance.py
PyCommon/modules/GUI/: CMakeLists.txt  SimpleViewer.settings  hpSimpleViewer.py  hpSplineEditor.py  makeMov.py  seViewer3.py  seViewer3_ys.py  ysBaseUI.py  ysMultiViewer.py  ysSimpleViewer.py  ysSimpleViewer_ori.py  ysSimpleViewer_ori_simplified.py  ysViewer3.py
PyCommon/modules/Math/: CMakeLists.txt  Math.makefile  Nomalizer.py  SmartPlot.settings  csMath.cpp  csMath.h  csMath.vcxproj  mmMath.py  setup.py  stdafx.h  test_csMath.py  ysFunctionGraph.py
PyCommon/modules/Mesh/: Mesh.makefile  cBaseLibUtil.h  csMetric.cpp  csMetric.vcxproj  csMetric.vcxproj.filters  setup.py  ysMesh.py
PyCommon/modules/Motion/: SimpleViewer.settings  SmartPlot.settings  hpMotionBlend.py  hpMotionGraph.py  import_trc.py  mmAnalyticIK.py  pmConstants.py  pmMotion.py  ysBipedAnalysis.py  ysHierarchyEdit.py  ysMotion.py  ysMotionAnalysis.py  ysMotionBlend.py  ysMotionExtend.py  ysMotionUtil.py  ysNumericalIK.py  ysSkeletonEdit.py  ysTrajectoryEdit.py
PyCommon/modules/NeuralNet/: TorchBase.py
PyCommon/modules/Optimization/: BaseLibUtil.h  LemkeLCPSolver.py  LemkeSolverBase.py  Makefile  Optimization.makefile  btDantzigLCP.cpp  btDantzigSolver.h  btLemkeAlgorithm.cpp  btLemkeSolver.cpp  btLemkeSolver.h  csLCPDantzigSolver.cpp  csLCPDantzigSolver.h  csLCPLemkeSolver.cpp  csLCPLemkeSolver.h  csQPOASES.cpp  csQPOASES.vcxproj  setup.py  setup_mac.py  setup_mac_omp.py  ysAnalyticConstrainedOpt.py
PyCommon/modules/Renderer/: CMakeLists.txt  ObjImporter.cpp  ObjImporter.h  Renderer.makefile  SimpleViewer.settings  csGearRenderer.cpp  csGearRenderer.h  csIMSRenderer.cpp  csIMSRenderer.h  csRenderer.cpp  csRenderer.h  csVpRenderer.cpp  csVpRenderer.exp  csVpRenderer.h  csVpRenderer.lib  csVpRenderer.pyd  csVpRenderer.vcxproj  csVpRenderer.vcxproj.filters  csVpRenderer_py.py  csVpRenderer_py_for_c.py  setup.py  setup_mac.py  setup_mac_omp.py  ysRenderer.py
PyCommon/modules/Resource/: SimpleViewer.settings  ysMotionLoader.py  ysOgreDataLoader.py
PyCommon/modules/Simulator/: .csVpModel.cpp.swp  .csVpModel.h.swp  CMakeLists.txt  GearUtil.h  SimpleViewer.settings  Simulator.makefile  VPUtil.h  VpUtil.cpp  charXmlParser.py  csDartEnvUtil.cpp  csDartModel.py  csDartWorld.py  csGearModel.cpp  csGearModel.h  csGearWorld.cpp  csGearWorld.h  csIMSModel.cpp  csIMSModel.h  csVpDartModel.cpp  csVpDartModel.h  csVpModel.cpp  csVpModel.exp  csVpModel.h  csVpModel.lib  csVpModel.pyd  csVpModel.vcxproj  csVpModel.vcxproj.filters  csVpModel_ori.cpp  csVpModel_ori.h  csVpModel_py.py  csVpUtil.py  csVpWorld.cpp  csVpWorld.exp  csVpWorld.h  csVpWorld.lib  csVpWorld.pyd  csVpWorld.vcxproj  csVpWorld.vcxproj.filters  csVpWorld_py.py  csVpWorld_tmp.py  (+16 more)
PyCommon/modules/Tools/: Amc2BvhEx.py  BvhViewer.py
PyCommon/modules/Util/: SimpleViewer.settings  SmartPlot.settings  bvh2DSXml.py  humanoid.xml  importOBJ.py  ysGlHelper.py  ysMatplotEx.py  ysPythonEx.py
PyCommon/modules/VirtualPhysics/: LieGroup.py  VP.py  VirtualPhysics.makefile  pyVpBJoint.cpp  pyVpBJoint.h  pyVpBody.cpp  pyVpBody.h  pyVpGeom.cpp  pyVpGeom.h  pyVpJoint.cpp  pyVpJoint.h  pyVpMaterial.cpp  pyVpMaterial.h  pyVpSystem.cpp  pyVpSystem.h  pyVpWorld.cpp  pyVpWorld.h  setup.py  setup_mac.py  setup_mac_omp.py
PyCommon/modules/VitualPhysics/: VpBody.h  VpWorld.cpp  VpWorld.h
PyCommon/modules/dart/: bvh2dartSkel.py  bvhskels2dartskel.py  csDartSimulator.cpp  csDartSimulator.h  dart_ik.py  test.xml
PyCommon/modules/samples/: Foot_v2_Jump_long.bvh  foot_model_01.bvh  foot_model_real_joint_01.bvh  simpleJump_long.bvh  simpleJump_long_test.bvh  simpleJump_long_test2.bvh  simpleJump_long_test3.bvh  simpleJump_long_test4.bvh  simpleJump_long_test5.bvh  wd2_WalkBackward00.bvh  wd2_WalkForwardNormal00.bvh  wd2_WalkForwardVFast00.bvh
PyCommon/modules/usr/include/: VP  VPUtil.h  gear
PyCommon/modules/usr/include/VP/: vpBody.h
PyCommon/modules/usr/include/gear/: liegroup.h
(+1418 files in other folders)
